--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -1,10 +1,11 @@
 .navbarGradient {
-    background: #1C222F;
+    background: #1DA1F2;
     opacity: 1.0;
 }
 
 body {
     margin-top: 5em;
+    background: #E6ECF0;
 }
 
 .userLabel {
@@ -13,4 +14,20 @@ body {
 
 table > thead > tr{
     border-top: hidden;
+}
+
+
+.tweetbox {
+    background: white;
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    border-style: solid;
+    border-width: 0.08em;
+}
+
+.pic {
+    height: 3em;
+    width: 3em;
+    border-radius: 50%;
 }
