--- a/frontend/src/main/resources/templates/home.html
+++ b/frontend/src/main/resources/templates/home.html
@@ -8,25 +8,43 @@
         <div th:replace="fragment/menu :: div"></div>
         <div class="container">
 
-
-
             <div class="col-sm-10 mx-auto">
 
-                <br>
+                <div class="row">
 
-                <row>
+                    <div class="col-sm-3">
 
-                    <div class="col">
+                        <img class="pic-lg" th:src="@{'/images/profile/' + 'profile1.png'}" alt="profile-image">
+
                         <p>Adem Salih</p>
 
-                        <span><span th:text="${followerCount}"></span> Followers</span>
+                        <span>
+                            <span th:text="${followerCount}"></span> Followers <br>
+                            <span th:text="${followingCount}"></span> Following <br>
+                            <span th:text="${totalTweets}"></span> Tweets
+                        </span>
 
-                        <span>34 Tweets</span>
+
 
                         <br>
                     </div>
 
-                    <div class="col">
+                    <div class="col-sm-9">
+
+                        <!-- POST NEW TWEET -->
+
+                        <form th:action="@{/tweet}" method="post" modelAttribute="tweet">
+
+                            <input type="hidden" th:value="${tweet.id}" name="id">
+
+                            <div class="form-group">
+                                <input type="text" class="form-control" th:value="${tweet.message}" placeholder="Tweet something here..." name="message">
+                            </div>
+
+                            <button class="btn btn-primary">Tweet</button>
+                        </form>
+
+                        <br>
 
                         <div th:each="t : ${feedTweets}">
 
@@ -34,13 +52,13 @@
                             <div  th:if="${t.newTweet == null}" class="tweetbox">
 
                                 <div style="width: 10%; float: left; height: 100%">
-                                    <img class="pic" th:src="@{'/images/profile/' + 'avatar.png'}" alt="profile-image">
+                                    <img class="pic" th:src="@{'/images/profile/' + ${t.profileImageName} }" alt="profile-image">
                                 </div>
 
                                 <span>
-                            <span th:text="${t.firstName}"></span>
-                            <span th:text="${t.lastName}"></span>
-                        </span>
+                                    <span th:text="${t.firstName}"></span>
+                                    <span th:text="${t.lastName}"></span>
+                                </span>
 
                                 <span>@ <span th:text="${t.userName}"></span></span>
 
@@ -63,13 +81,13 @@
 
                                 <div class="tweetbox">
                                     <div style="width: 10%; float: left; height: 100%">
-                                        <img class="pic" th:src="@{'/images/profile/' + 'avatar.png'}" alt="profile-image">
+                                        <img class="pic" th:src="@{'/images/profile/' + ${t.newTweet.profileImageName}" alt="profile-image">
                                     </div>
 
                                     <span>
-                            <span th:text="${t.newTweet.firstName}"></span>
-                            <span th:text="${t.newTweet.lastName}"></span>
-                        </span>
+                                        <span th:text="${t.newTweet.firstName}"></span>
+                                        <span th:text="${t.newTweet.lastName}"></span>
+                                    </span>
 
                                     <span>@ <span th:text="${t.newTweet.userName}"></span></span>
 
@@ -89,9 +107,7 @@
 
                     </div>
 
-
-
-                </row>
+                </div>
 
 
 
