--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -1,17 +1,106 @@
-
-
 body {
-    margin-top: 5em;
+    margin-top: 3.5em;
     background: #E6ECF0;
 }
 
-.userLabel {
-    color: white;
+/************ PROFILE BOX ************/
+
+.profile-box {
+    height: 13em;
+    width: 18em;
+    position: relative;
 }
 
-table > thead > tr{
-    border-top: hidden;
+.profile-box-pic {
+    margin-top: 4em;
+    margin-left: 0.5em;
+    position: absolute;
+    width: 4.5em;
+    height: 4.5em;
+    border-radius: 50%;
+    border: 0.18em solid #ffffff;
 }
+
+.profile-box-top-box {
+    background-color: #1DA1F2;
+    width: 100%;
+    height: 47%
+}
+
+.profile-box-bottom-box {
+    background-color: white;
+    width: 100%;
+    height: 53%
+}
+
+.name-box {
+    margin-left: 5.5em;
+    padding-top: 0.8em;
+    line-height: 1.15em;
+    margin-bottom: 0.5em;
+}
+
+.profile-name {
+    font-size: 1.05em;
+    font-weight: bold;
+}
+
+.handle-name {
+    color: #657786;
+    font-size: 0.84em;
+}
+
+.follow-stat-header {
+    color: #657786;
+    font-size: 0.7em;
+}
+
+.follow-stat-number {
+    color: #1DA1F2;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.follow-stat-table {
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+/************ TWEET BOX ************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .tweetbox {
@@ -29,6 +118,12 @@ table > thead > tr{
     border-radius: 50%;
 }
 
+.pic-sm {
+    height: 1.5em;
+    width: 1.5em;
+    border-radius: 50%;
+}
+
 .pic-lg {
     height: 5em;
     width: 5em;
@@ -41,10 +136,6 @@ table > thead > tr{
     border-radius: 5%;
 }
 
-
-
-
-
 .navbarGradient {
     background: #ffffff;
     opacity: 1.0;
@@ -52,13 +143,16 @@ table > thead > tr{
 
 
 .navbar {
-    min-height: 40px;
+    min-height: 46px;
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
+    box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
 }
 
 .navbar-brand {
     padding: 0 15px;
-    height: 40px;
-    line-height: 40px;
+    height: 46px;
+    line-height: 46px;
 
     position: absolute;
     width: 100%;
@@ -72,4 +166,8 @@ table > thead > tr{
     /* (80px - button height 34px) / 2 = 23px */
     margin-top: 23px;
     padding: 9px 10px !important;
+}
+
+.container {
+    width: 73%;
 }
