--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -3,6 +3,12 @@ body {
     background: #E6ECF0;
 }
 
+.container {
+    width: 73%;
+}
+
+
+
 /************ PROFILE BOX ************/
 
 .profile-box {
@@ -67,8 +73,8 @@ body {
 }
 
 
-/************ TWEET BOX ************/
 
+/************ TWEET BOX ************/
 
 .tweetbox {
     width: 36.8em;
@@ -149,7 +155,56 @@ body {
     width: 1.1em;
 }
 
+.retweet-box {
+    margin-left: 2.9em;
+    margin-top: 0.4em;
+}
 
+.user-retweet-icon {
+    width: 0.9em;
+}
+
+.retweeted-text {
+    font-size: 0.8em;
+    color: #657786;
+    margin-left: 0.45em;
+}
+
+
+
+/************ NAVBAR ************/
+
+.navbarGradient {
+    background: #ffffff;
+    opacity: 1.0;
+}
+
+
+.navbar {
+    min-height: 46px;
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
+    box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
+}
+
+.navbar-brand {
+    padding: 0 15px;
+    height: 46px;
+    line-height: 46px;
+
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    margin: auto;
+}
+
+.navbar-toggle {
+    /* (80px - button height 34px) / 2 = 23px */
+    margin-top: 23px;
+    padding: 9px 10px !important;
+}
 
 
 
@@ -194,40 +249,4 @@ body {
     height: 8em;
     width: 10em;
     border-radius: 5%;
-}
-
-.navbarGradient {
-    background: #ffffff;
-    opacity: 1.0;
-}
-
-
-.navbar {
-    min-height: 46px;
-    -webkit-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
-    -moz-box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
-    box-shadow: 0px 1px 1px 0px rgba(176,176,176,1);
-}
-
-.navbar-brand {
-    padding: 0 15px;
-    height: 46px;
-    line-height: 46px;
-
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    text-align: center;
-    margin: auto;
-}
-
-.navbar-toggle {
-    /* (80px - button height 34px) / 2 = 23px */
-    margin-top: 23px;
-    padding: 9px 10px !important;
-}
-
-.container {
-    width: 73%;
 }
